--- a/css/ui.css
+++ b/css/ui.css
@@ -164,7 +164,8 @@ h1.site-name-placeholder {
     font-weight: 300;
 }
 
-main {
+
+.blog-and-sidebar {
     max-width: 1200px;
     display: grid;
     grid-template-columns: [blog] 1fr [sidebar] 250px;
@@ -242,6 +243,32 @@ main {
     /* font-size: 1.2rem; */
 }
 
+.wp-block-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 840px;
+    justify-content: center;
+}
+
+
+.wp-block-gallery figure {
+    display: flex;
+    /* width: 200px;
+    height: 200px; */
+    /* margin: auto; */
+}
+
+/* figure.wp-block-image {
+    width: 200px;
+    height: 200px;
+} */
+/* 
+.wp-block-image img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+} */
+
 .blog-post-info {
     display: flex;
     /* background-color: rgba(173, 186, 178, 0.9); */
@@ -281,6 +308,7 @@ main {
     margin-bottom: 50px;
 }
 
+
 .newest-posts ul,
 .newest-comments ul {
     margin-right: 7%;
@@ -290,7 +318,8 @@ main {
     font-weight: 300;
 }
 
-.newest-comments li {
+.newest-comments li,
+.newest-posts li {
     margin-bottom: 20px;
     font-style: italic;
 }
@@ -309,6 +338,8 @@ main {
     margin-left: 5%;
     font-size: 0.85rem;
     font-weight: 300;
+    display: flex;
+    gap: 15px
 }
 
 .breadcrumbs p {
@@ -357,4 +388,12 @@ footer {
     margin-left: 5%;
     font-style: italic;
     font-size: 0.85rem;
+}
+
+.loader {
+    color: #fff;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    font-size: 2rem;
 }
