--- a/css/ui.css
+++ b/css/ui.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-color: #504E4E;
     font-family: 'Inter', sans-serif;
+    min-height: 100vh;
 }
 
 h4,
@@ -38,6 +39,10 @@ a {
     display: flex;
 }
 
+.main-menu li:hover {
+    color: #fff;
+}
+
 :root {
     --main-color-one: #35423A;
     --main-color-two: #ADBAB2;
@@ -46,7 +51,7 @@ a {
 
 .header-image {
     height: 250px;
-    width: 100vw;
+    max-width: 100vw;
     background-color: var(--main-color-one);
     color: azure;
 }
@@ -59,7 +64,7 @@ h1.site-name-placeholder {
 }
 
 .main-menu {
-    width: 100vw;
+    max-width: 100vw;
     background-color: black;
     height: 60px;
     color: var(--main-color-two);
@@ -96,13 +101,23 @@ h1.site-name-placeholder {
     width: 300px;
     height: 250px;
     background-color: var(--main-color-two);
+    background-color: var(--main-color-one);
+    background-size: cover;
     padding: 0 10px;
     text-align: center;
+    color: #fff;
+    font-weight: 200;
+    font-size: 0.9rem;
 }
 
-.center-site-info p {
-    margin-bottom: 5px;
+.center-site-info-header {
+    font-weight: 200;
+    margin-bottom: 0;
 }
+
+/* .center-site-info p {
+    margin-bottom: 5px;
+} */
 
 .scroll-down {
     width: 150px;
@@ -169,6 +184,7 @@ h1.site-name-placeholder {
     max-width: 1200px;
     display: grid;
     grid-template-columns: [blog] 1fr [sidebar] 250px;
+    margin: auto;
 }
 
 .blog-content {
@@ -177,8 +193,8 @@ h1.site-name-placeholder {
     /* max-width: 1000px; */
     background-color: var(--main-color-three);
     grid-column: blog;
-
 }
+
 
 .blog-post {
     margin-bottom: 50px;
@@ -321,9 +337,15 @@ h1.site-name-placeholder {
 .newest-comments li,
 .newest-posts li {
     margin-bottom: 20px;
-    font-style: italic;
+    padding: 6px;
+    border-radius: 6px;
+    background-color: #35423a7a;
 }
 
+.newest-comments li p {
+    margin: 0;
+    font-weight: 200;
+}
 
 .read-more {
     text-align: end;
@@ -346,20 +368,21 @@ h1.site-name-placeholder {
     margin: 0;
 }
 
-footer {
-    background-color: var(--main-color-one);
-    height: 250px;
-}
+
 
 
 /* SINGLE BLOG POST PAGE */
 
-.main-container {
+.single-blogpost-container,
+.main-content {
     max-width: 1200px;
     background-color: #fff;
     height: fit-content;
     margin: auto;
     padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    min-height: 500px;
 }
 
 .main-post-img {
@@ -368,7 +391,7 @@ footer {
     object-fit: cover;
 }
 
-.main-container h1 {
+.single-blogpost-container h1 {
     margin: 0 5% 0 5%;
     padding-top: 20px;
 }
@@ -393,7 +416,8 @@ footer {
 .loader {
     color: #fff;
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     font-size: 2rem;
+    background-color: var(--main-color-three);
 }
