All pages created.
Added all pages, not done editing text on those but layout is set.
Added a filter section in the sidebar, not assigned to any js yet.
++other tewaks on the layout, like a dropdown menu under "varemerker". Not super happy about how it looks so will return to it later.
Trying to make my css cleaner.

--- a/css/media.css
+++ b/css/media.css
@@ -39,6 +39,10 @@
     .newest-instagram {
         display: none;
     }
+
+    .filter-posts {
+        display: none;
+    }
 }
 
 @media (max-width: 670px) {
