--- a/css/ui.css
+++ b/css/ui.css
@@ -6,25 +6,9 @@ body {
     min-height: 100vh;
 }
 
-h4,
-h2,
-h5 {
-    margin: 0;
-}
 
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.horizontal-line {
-    border-bottom: 1px dotted white;
-    margin: 5px 10px;
+.main-menu {
+    position: relative;
 }
 
 .main-menu ul {
@@ -146,7 +130,7 @@ h1.site-name-placeholder {
     justify-content: flex-end;
     background-color: #35423A;
     background: linear-gradient(45deg, transparent 20%, var(--main-color-one) 20%);
-    width: 260px;
+    width: 258px;
     height: 30px;
     text-align: end;
     padding-right: 10px;
@@ -272,6 +256,7 @@ h1.site-name-placeholder {
     flex-wrap: wrap;
     max-width: 840px;
     justify-content: center;
+    margin: 0;
 }
 
 
@@ -315,7 +300,7 @@ h1.site-name-placeholder {
     color: var(--main-color-two);
     grid-column: sidebar;
     border-left: 1px solid var(--main-color-one);
-    grid-template-rows: min-content min-content auto;
+    grid-template-rows: min-content min-content min-content auto;
 }
 
 .sidebar h2 {
@@ -384,6 +369,7 @@ h1.site-name-placeholder {
 
 .single-blogpost-container,
 .contact-page-container,
+.fenty-beauty-container,
 .main-content {
     max-width: 1200px;
     background-color: #fff;
@@ -415,19 +401,11 @@ h1.site-name-placeholder {
 
 .single-blog-post-text {
     margin-left: 5%;
+    margin-right: 5%;
 }
 
 .category {
     margin-left: 5%;
     font-style: italic;
     font-size: 0.85rem;
-}
-
-.loader {
-    color: #fff;
-    text-align: center;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    font-size: 2rem;
-    background-color: var(--main-color-three);
 }
