more posts button working
Need to figure out how to disable button when there is no more posts to load.
added a non working searchbar. and played around with some styling.

--- a/css/media.css
+++ b/css/media.css
@@ -36,6 +36,10 @@
         gap: 10px;
     }
 
+    .searchbar {
+        display: none;
+    }
+
     .newest-instagram {
         display: none;
     }
