--- a/css/ui.css
+++ b/css/ui.css
@@ -231,6 +231,7 @@ h1.site-name-placeholder {
     height: 300px;
     width: 100%;
     object-fit: cover;
+    filter: brightness(0.85);
 }
 
 .blog-post-title {
@@ -238,12 +239,13 @@ h1.site-name-placeholder {
     text-align: center;
     max-width: 700px;
     min-width: fit-content;
-    background-color: rgba(173, 186, 178, 0.7);
+    background-color: rgba(173, 186, 178, 0.85);
     border-radius: 6px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
 }
 
 .blog-post-text {
@@ -251,10 +253,14 @@ h1.site-name-placeholder {
     /* font-size: 1.2rem; */
 }
 
+.blog-post-text p {
+    margin-bottom: 10px;
+}
+
 .wp-block-gallery {
     display: flex;
     flex-wrap: wrap;
-    max-width: 840px;
+    max-width: 100%;
     justify-content: center;
     margin: 0;
 }
@@ -278,11 +284,23 @@ h1.site-name-placeholder {
     object-fit: cover;
 }
 
+#read-more {
+    text-align: right;
+    font-style: italic;
+    margin: 3%;
+    font-size: 0.9rem;
+}
+
+#read-more:hover {
+    font-weight: 600;
+}
+
 .blog-post-info {
     display: flex;
-    /* background-color: rgba(173, 186, 178, 0.9); */
-    border-radius: 6px;
-    margin: 3%;
+    background-color: rgba(173, 186, 178, 0.9);
+    /* border-radius: 6px; */
+    /* margin: 3%; */
+    padding: 1% 3%;
     justify-content: space-between;
     font-style: italic;
 }
@@ -291,6 +309,11 @@ h1.site-name-placeholder {
     color: #ADBAB2;
     margin: auto;
     margin-bottom: 50px;
+    cursor: pointer;
+}
+
+.load-more:hover {
+    font-style: italic;
 }
 
 .sidebar {
