--- a/css/utilities.css
+++ b/css/utilities.css
@@ -24,9 +24,10 @@ a {
 
 /*          GLOBAL PAGES STYLING    */
 .page-header-img {
-    height: 300px;
+    max-height: 300px;
     object-fit: cover;
     box-shadow: 0 7px 9px var(--main-color-one);
+    filter: brightness(0.9);
 }
 
 .about-text {
@@ -125,12 +126,14 @@ a {
     text-align: center;
 }
 
+
 .carousel-img {
     width: 350px;
     height: 200px;
     object-fit: cover;
     border-radius: 6px;
     /* position: relative; */
+    filter: brightness(0.9);
 }
 
 .carousel-text {
@@ -139,9 +142,9 @@ a {
     left: 0;
     background-color: rgba(173, 186, 178, 0.9);
     width: fit-content;
-    max-width: 250px;
+    max-width: 300px;
     margin: 0;
-    padding: 10px;
+    padding: 10px 0;
     border-radius: 0 6px;
 }
 
@@ -150,7 +153,8 @@ a {
 .fenty-beauty-checkbox,
 .fenty-skin-checkbox,
 .savagex-checkbox,
-.music-checkbox {
+.music-checkbox,
+.collaboration-checkbox {
     margin: 10px 7%;
 }
 
@@ -158,6 +162,14 @@ a {
     margin-bottom: 20px;
 }
 
+.searchbar {
+    margin: 7%;
+}
+
+.searchbar input {
+    padding: 6px;
+    border-radius: 6px;
+}
 
 
 /* CONTACT PAGE */
