--- a/css/ui.css
+++ b/css/ui.css
@@ -6,6 +6,11 @@ body {
     min-height: 100vh;
 }
 
+main {
+    max-width: 1200px;
+    margin: auto;
+}
+
 
 .main-menu {
     position: relative;
@@ -34,17 +39,33 @@ body {
 }
 
 .header-image {
-    height: 250px;
+    max-height: 250px;
     max-width: 100vw;
+    min-height: 150px;
     background-color: var(--main-color-one);
     color: azure;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-image img {
+    max-width: 90%;
+    margin: auto;
 }
 
 h1.site-name-placeholder {
     font-size: 3rem;
-    text-align: center;
-    line-height: 250px;
+    /* line-height: 250px; */
     margin: 0;
+}
+
+.header-image p {
+    display: none;
+    font-style: italic;
+    font-size: 0.8rem;
+    padding: 0 10px;
 }
 
 .main-menu {
@@ -72,7 +93,7 @@ h1.site-name-placeholder {
 }
 
 .left-info-image img {
-    max-width: 450px;
+    max-width: fit-content;
     min-width: 200px;
     height: 250px;
     opacity: 50%;
@@ -99,6 +120,10 @@ h1.site-name-placeholder {
     margin-bottom: 0;
 }
 
+.welcome {
+    margin-bottom: 0;
+}
+
 /* .center-site-info p {
     margin-bottom: 5px;
 } */
@@ -117,7 +142,7 @@ h1.site-name-placeholder {
 
 .new-posts-site-info-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 100%;
     height: 30px;
     align-items: center;
@@ -141,12 +166,12 @@ h1.site-name-placeholder {
     font-weight: 300;
 }
 
-.new-posts-site-info-header p {
+/* .new-posts-site-info-header p {
     color: #504E4E;
     margin-left: 10px;
     font-size: 0.8rem;
     font-style: italic;
-}
+} */
 
 .news-and-content {
     text-align: center;
@@ -217,7 +242,7 @@ h1.site-name-placeholder {
 
 .blog-post-header-img img {
     height: 50px;
-    width: 400px;
+    width: 350px;
     object-fit: cover;
     opacity: 30%;
 
@@ -257,6 +282,21 @@ h1.site-name-placeholder {
     margin-bottom: 10px;
 }
 
+/* .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 850px;
+    gap: 20px;
+    margin: auto;
+    justify-content: center;
+}
+
+.thumbnail img {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+} */
+
 .wp-block-gallery {
     display: flex;
     /* display: none; */
@@ -283,7 +323,9 @@ h1.site-name-placeholder {
     width: 150px;
     height: 150px;
     object-fit: cover;
+    cursor: pointer;
 }
+
 
 #read-more {
     text-align: right;
@@ -332,7 +374,7 @@ h1.site-name-placeholder {
     background-color: #242424;
     color: var(--main-color-two);
     grid-column: sidebar;
-    border-left: 1px solid var(--main-color-one);
+    /* border-left: 1px solid var(--main-color-one); */
     grid-template-rows: min-content min-content min-content auto;
 }
 
