--- a/css/utilities.css
+++ b/css/utilities.css
@@ -23,6 +23,7 @@ a {
 
 
 /*          GLOBAL PAGES STYLING    */
+
 .page-header-img {
     max-height: 300px;
     object-fit: cover;
@@ -263,4 +264,30 @@ footer {
 .copyright {
     text-align: center;
     color: white;
+}
+
+
+/* MODAL TEST */
+::backdrop {
+    background-image: linear-gradient(45deg,
+            rgb(112, 106, 112),
+            rgb(22, 21, 22),
+            rgb(8, 54, 19),
+            rgb(7, 75, 7));
+    opacity: 0.75;
+}
+
+dialog {
+    max-height: 90vh;
+    max-width: 100%;
+    padding: 0;
+
+}
+
+dialog img {
+    max-width: 90vw;
+    max-height: inherit;
+    object-fit: contain;
+    display: flex;
+    cursor: pointer;
 }
