Made a filter function
filter function based on categories.
changed the text output on the blogposts on homepage to be less content so you'll need to go into the bnlog post to see all

--- a/css/media.css
+++ b/css/media.css
@@ -44,9 +44,9 @@
         display: none;
     }
 
-    .filter-posts {
+    /* .filter-posts {
         display: none;
-    }
+    } */
 }
 
 @media (max-width: 670px) {
