--- a/css/ui.css
+++ b/css/ui.css
@@ -323,7 +323,6 @@ h1.site-name-placeholder {
     width: 150px;
     height: 150px;
     object-fit: cover;
-    cursor: pointer;
 }
 
 
@@ -481,6 +480,10 @@ h1.site-name-placeholder {
 
 .single-blog-post-text li {
     padding: 5px;
+}
+
+.single-post-gallery {
+    cursor: pointer;
 }
 
 .category {
