--- a/css/ui.css
+++ b/css/ui.css
@@ -335,10 +335,19 @@ h1.site-name-placeholder {
 
 
 #read-more {
-    text-align: right;
-    font-style: italic;
     margin: 3%;
+    display: flex;
+    justify-content: end;
+}
+
+#read-more a {
+    color: #fff;
+    padding: 10px;
+    border-radius: 6px;
+    font-style: italic;
+
     font-size: 0.9rem;
+    background-color: var(--main-color-one);
 }
 
 #read-more:hover,
@@ -347,10 +356,16 @@ h1.site-name-placeholder {
 }
 
 #go-back {
-    text-align: left;
-    font-style: italic;
     margin: 3%;
+    display: flex;
+    justify-content: start;
+    width: fit-content;
+    color: #fff;
+    padding: 10px;
+    border-radius: 6px;
+    font-style: italic;
     font-size: 0.9rem;
+    background-color: var(--main-color-one);
     cursor: pointer;
 }
 
@@ -432,8 +447,8 @@ h1.site-name-placeholder {
 }
 
 .breadcrumbs {
-    margin-left: 5%;
-    margin-top: 5px;
+    margin: 5px 5% 0 5%;
+    /* margin-top: 5px; */
     font-size: 0.85rem;
     font-weight: 300;
     display: flex;
@@ -496,6 +511,41 @@ h1.site-name-placeholder {
 
 .category {
     margin-left: 5%;
-    font-style: italic;
     font-size: 0.85rem;
 }
+
+.category a {
+    font-style: italic;
+}
+
+.blog-posts-category-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 3%;
+    justify-content: center;
+}
+
+.blog-post-container {
+    max-width: 300px;
+    min-width: 200px;
+    height: 300px;
+    margin: 10px;
+    border: 1px solid black;
+    background-color: var(--main-color-two);
+    padding: 6px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.blog-post-container:hover {
+    background-color: #829288;
+}
+
+.category-img {
+    width: 100%;
+    height: 120px;
+    object-fit: cover;
+    box-shadow: 0px 2px 5px black;
+}
+
+.category-filter-blog-text {}
