--- a/css/ui.css
+++ b/css/ui.css
@@ -178,7 +178,7 @@ h1.site-name-placeholder {
 .news-and-content {
     text-align: center;
     margin: 0;
-    color: #2D2929;
+    color: #a7a5a5;
     font-weight: 300;
 }
 
