--- a/css/ui.css
+++ b/css/ui.css
@@ -60,6 +60,7 @@ main {
 .header-image img {
     max-width: 90%;
     margin: auto;
+    display: flex;
 }
 
 h1.site-name-placeholder {
@@ -187,6 +188,7 @@ h1.site-name-placeholder {
     display: grid;
     grid-template-columns: [blog] 1fr [sidebar] 250px;
     margin: auto;
+    min-height: 100vh;
 }
 
 .blog-posts-container {
@@ -243,7 +245,7 @@ h1.site-name-placeholder {
     padding-left: 20px;
     line-height: 50px;
     max-width: 300px;
-    min-width: 250px;
+    min-width: 210px;
     color: #fff;
 }
 
@@ -327,10 +329,22 @@ h1.site-name-placeholder {
     height: 200px;
 } */
 
+/* .wp-block-image img {
+    /* max-width: fit-content;
+    max-height: 500px; 
+object-fit: cover;
+width: 150px;
+height: 150px;
+}*/
 .wp-block-image img {
     width: 150px;
     height: 150px;
     object-fit: cover;
+}
+
+figcaption {
+    font-size: 0.7rem;
+    font-style: italic;
 }
 
 
@@ -398,6 +412,7 @@ h1.site-name-placeholder {
     grid-column: sidebar;
     /* border-left: 1px solid var(--main-color-one); */
     grid-template-rows: min-content min-content min-content auto;
+    gap: 20px;
 }
 
 .sidebar h2 {
@@ -412,6 +427,7 @@ h1.site-name-placeholder {
 .newest-posts,
 .newest-comments {
     margin-bottom: 15px;
+    max-width: 300px;
 }
 
 
@@ -435,6 +451,11 @@ h1.site-name-placeholder {
 .newest-comments li p {
     margin: 0;
     font-weight: 200;
+}
+
+.newest-posts li:hover,
+.newest-comments li:hover {
+    background-color: #495a4f7a;
 }
 
 .read-more {
@@ -470,12 +491,12 @@ h1.site-name-placeholder {
 .main-content {
     max-width: 1200px;
     background-color: #fff;
-    height: fit-content;
+    min-height: 100vh;
     margin: auto;
     padding-bottom: 30px;
     display: flex;
     flex-direction: column;
-    min-height: 500px;
+    /* min-height: 500px; */
 }
 
 .main-post-img {
@@ -533,13 +554,19 @@ h1.site-name-placeholder {
 .blog-post-container {
     max-width: 300px;
     min-width: 200px;
-    height: 300px;
+    min-height: 320px;
+    height: fit-content;
     margin: 10px;
     border: 1px solid black;
     background-color: var(--main-color-two);
-    padding: 6px;
+    background-color: white;
     border-radius: 6px;
     overflow: hidden;
+}
+
+.blog-post-container h2,
+.blog-post-container p {
+    padding: 6px;
 }
 
 .blog-post-container:hover {
