Aria attributes to menu menu
Added tab functionality to the desktop main menu drop down. Out of my knowledge level so stated my source in the js file, but not sure if I will keep it for exam delivery.

--- a/css/media.css
+++ b/css/media.css
@@ -194,13 +194,15 @@
         flex-wrap: wrap;
     }
 
-    .sub-menu {
+
+    ul.sub-menu {
         position: relative;
         font-size: 0.9rem;
         padding: 0;
+        display: none;
     }
 
-    .sub-menu li {
+    ul.sub-menu li {
         line-height: 40px;
     }
 
@@ -208,11 +210,15 @@
         border-bottom: none;
     }
 
-    .main-menu>ul>li.sub-menu-start>ul.sub-menu {
+    ul.sub-menu {
         display: flex;
     }
 
-    .main-menu>ul>li.sub-menu-start:hover>ul.sub-menu {
+    ul.sub-menu {
+        top: 0;
+    }
+
+    li.sub-menu-start:hover>ul.sub-menu {
         top: 0;
     }
 
