--- a/css/ui.css
+++ b/css/ui.css
@@ -336,9 +336,21 @@ object-fit: cover;
 width: 150px;
 height: 150px;
 }*/
-.wp-block-image img {
+.wp-block-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.wp-block-gallery img {
     width: 150px;
     height: 150px;
+    object-fit: cover;
+}
+
+.wp-block-image>img {
+    max-width: 500px;
+    max-height: 500px;
     object-fit: cover;
 }
 
