--- a/css/ui.css
+++ b/css/ui.css
@@ -199,7 +199,7 @@ h1.site-name-placeholder {
 
 .blog-content {
     display: grid;
-    min-height: 150px;
+    min-height: 100vh;
     /* max-width: 1000px; */
     background-color: var(--main-color-three);
     grid-column: blog;
