--- a/css/ui.css
+++ b/css/ui.css
@@ -347,9 +347,10 @@ height: 150px;
 }
 
 .wp-block-image>img {
-    max-width: 80%;
-    max-height: 500px;
+    max-width: 700px;
+    max-height: 700px;
     object-fit: contain;
+    object-fit: cover;
 }
 
 figcaption {
