--- a/css/utilities.css
+++ b/css/utilities.css
@@ -400,6 +400,39 @@ textarea {
     margin-top: 20px;
 }
 
+/*          BRAND PAGES             */
+
+.brand-quick-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: 1px solid var(--main-color-two);
+    border-bottom: 1px solid var(--main-color-two);
+}
+
+.brand-quick-info p {
+    margin: 5px;
+    font-weight: 500;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.about-text h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.about-text iframe {
+    margin-top: 20px;
+    display: flex;
+    align-self: center;
+    width: 80%;
+    height: 432px;
+}
+
 
 /* FOOTER   */
 footer {
