--- a/css/utilities.css
+++ b/css/utilities.css
@@ -445,7 +445,7 @@ textarea {
 
 #submit {
     padding: 10px;
-    width: 100px;
+    width: fit-content;
     background-color: var(--main-color-one);
     border-radius: 6px;
     color: #fff;
