--- a/css/ui.css
+++ b/css/ui.css
@@ -104,6 +104,8 @@ h1.site-name-placeholder {
 .center-site-info {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     width: 300px;
     height: 250px;
     background-color: var(--main-color-two);
@@ -117,9 +119,14 @@ h1.site-name-placeholder {
 }
 
 .center-site-info-header {
-    font-weight: 200;
     margin-bottom: 0;
+    padding-bottom: 5px;
+    max-width: 200px;
+    min-width: 150px;
     margin-top: 5px;
+    font-weight: 500;
+    font-size: 0.8rem;
+    border-bottom: 1px dotted var(--main-color-two);
 }
 
 .welcome {
@@ -130,6 +137,9 @@ h1.site-name-placeholder {
 /* .center-site-info p {
     margin-bottom: 5px;
 } */
+.tagline {
+    margin-top: 1px;
+}
 
 .scroll-down {
     width: 150px;
