--- a/css/utilities.css
+++ b/css/utilities.css
@@ -413,9 +413,34 @@ option {
 
 /* CONTACT PAGE */
 
-.contact-form {
+.contact-form-container {
     margin: 10px;
+    max-width: 465px;
+    width: 95%;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: var(--main-color-two);
 }
+
+#contact-form {
+    padding: 10px;
+}
+
+.success-form-message {
+    padding: 10px;
+    border-radius: 6px;
+    border: 1px solid var(--main-color-one);
+}
+
+/*first contact form wo api access*/
+/* #form {
+    padding: 10px; 
+} 
+
+
 
 fieldset {
     max-width: 465px;
@@ -443,7 +468,7 @@ fieldset input {
 fieldset ul {
     padding: 0;
 }
-
+*/
 input[type="text"],
 input[type="number"],
 input[type="email"],
