--- a/css/utilities.css
+++ b/css/utilities.css
@@ -415,14 +415,14 @@ option {
 
 .contact-form-container {
     margin: 10px;
-    max-width: 465px;
+    /* max-width: 465px;
     width: 95%;
     margin: auto;
     margin-bottom: 10px;
     margin-top: 20px;
     border-radius: 10px;
     border: 1px solid black;
-    background-color: var(--main-color-two);
+    background-color: var(--main-color-two); */
 }
 
 #contact-form {
@@ -436,9 +436,9 @@ option {
 }
 
 /*first contact form wo api access*/
-/* #form {
-    padding: 10px; 
-} 
+#form {
+    padding: 10px;
+}
 
 
 
@@ -468,7 +468,7 @@ fieldset input {
 fieldset ul {
     padding: 0;
 }
-*/
+
 input[type="text"],
 input[type="number"],
 input[type="email"],
@@ -497,6 +497,7 @@ textarea {
     color: darkred;
     margin-bottom: 15px;
     font-style: italic;
+    font-size: 0.9rem;
 }
 
 /*      SINGLE POST PAGE        */
