--- a/css/utilities.css
+++ b/css/utilities.css
@@ -433,6 +433,7 @@ option {
     padding: 10px;
     border-radius: 6px;
     border: 1px solid var(--main-color-one);
+    text-align: center;
 }
 
 /*first contact form wo api access*/
@@ -628,6 +629,7 @@ textarea {
 .about-text h2 {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 1.4rem;
 }
 
 .about-text iframe {
